[package]
name = "urm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urm_macros = { path = "../urm_macros", version = "0.1.0" }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
async-graphql = { version = "2", optional = true }
async-trait = "0.1"
parking_lot = "0.11"

[features]
default = ["async_graphql"]
async_graphql = ["async-graphql"]
